src/css/_magicssian_all.css
/* ... */
/*! * Dropdown navigation */
.dropdown {
}
.dropdown li {
}
.dropdown ul {
  display: none;
}
.dropdown li:hover > ul {
  display: inherit;
}
.dropdown.inline, 
.dropdown.inline > li {
  display: inline-block;
}
.dropdown.inline ul {
  position: absolute;
  left: 0;
  top: 10px;
  width: max-content;
}
.dropdown.inline li:hover > ul {
  display: inline-block;
}



/*! * Horizontal scroll container */
.scroll-h {
  position: relative;
  max-width: 100%;
  overflow: hidden;
}
.scroll-h:after {
  display: inline-block;
  content: '';
  width: var(--rhytm-unit);
  height: var(--rhytm-unit);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='20' viewBox='0 -3 10 20'%3E%3Cpolygon points='8 7 2 3 2 11 ' fill='%231A1A1A'/%3E%3C/svg%3E");
  background-position: center;
  background-repeat: no-repeat;
  right: 0;
  top: 0;
  position: absolute;
}
.scroll-h .content {
  max-width: calc(100% - 2 * var(--rhytm-unit));
  padding-bottom: var(--rhytm-unit);
  overflow-y: hidden;
  overflow-x: scroll;
  white-space: nowrap;
}



/*! * Collection */
.collection {
  min-height: 280px;
  border: 1px solid var(--neutral-color);
  border-radius: var(--rounded);
}
.collection .heading {
  margin: 0;
  padding: calc(.5 * var(--rhytm-unit));
  background: var(--neutral-color);
  line-height: calc(2 * var(--rhytm-unit));
}
.collection .content {
  padding: var(--rhytm-unit);
}
.collection .content > *:after {
  content: '\A';
  white-space: pre;
}
.collection .content > *:last-child:after {
  content: '';
}
.collection .heading > *, 
.collection .content > * {
  margin: 0;
}



/*! * Collapse container */
.collapse {
  border: 1px solid var(--neutral-color);
  border-radius: var(--rounded);
}
.collapse > label {
  cursor: pointer;
}
.collapse .heading {
  position: relative;
  margin: 0;
  padding: calc(.5 * var(--rhytm-unit));
  line-height: calc(2 * var(--rhytm-unit));
}
.collapse .heading:after {
  position: absolute;
  content: '';
  display: block;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='20' viewBox='0 -3 10 20'%3E%3Cpolygon points='8 7 2 3 2 11 ' fill='%231A1A1A'/%3E%3C/svg%3E");
  width: 10px;
  height: 20px;
  right: calc(.5 * var(--rhytm-unit));
  top: 20px;
  background-repeat: no-repeat;
  background-position: center;
  transform: rotate(90deg);
}
.collapse .content {
  height: 0;
  margin: 0;
  padding: 0 var(--rhytm-unit) var(--rhytm-unit) var(--rhytm-unit);
  overflow: hidden;
  transition: all .4s ease-out;
}
.collapse > [type=checkbox]:checked + label .heading:after, 
.collapse.active .heading:after {
  transform: rotate(-90deg);
}
.collapse > [type=checkbox]:checked + label + .content, 
.collapse.active .content {
  padding: calc(.5 * var(--rhytm-unit)) var(--rhytm-unit);
  height: 280px;
}



/*! * Tabs */
.tabs .navigation a {
  cursor: pointer;
  border: 1px solid var(--neutral-color);
  padding: calc(.5 * var(--rhytm-unit));
}
.tabs .navigation a.active {
  font-weight: bold;
  border-bottom-color: #fff;
}
.tabs .tab {
  margin-top: -1px;
  padding: var(--rhytm-unit);
  border: 1px solid var(--neutral-color);
}
.tabs > .tab ~ .tab {
  display: none;
}
.tabs .tab {
  border-bottom-right-radius: var(--rounded);
  border-bottom-left-radius: var(--rounded);
}
.tabs .navigation a:first-child {
  border-top-left-radius: var(--rounded);
}
.tabs .navigation a:last-child {
  border-top-right-radius: var(--rounded);
}



/*! Utilities */



/* Padded container */
.padded {
  padding: calc(.5 * var(--rhytm-unit));
}

/* Float & clearfix
 * BEEP BEEP Richie! 
 * they ALL float down here. 
 * when you're down here with us, you'll float too! */
.float-l {
  float: left;
}
.float-r {
  float: right;
}
.clearfix:before,
.clearfix:after {
  content: ' ';
  display: table;
}
.clearfix:after {
  clear: both;
}

/* Display
 * Tadaa! the most basic magic trick */
.show {
  display: block;
}
.hidden {
  display: none;
}
.invisible {
  visibility: hidden;
}

/* Old school image replacement */
.ir {
  display: inline-block;
  background-color: transparent;
  border: 0;
  text-indent: 1000px;
  white-space: nowrap;
  overflow: hidden;
}
.ir:before {
  display: block;
  width: 0;
  height: 100%;
}

/* Rounded corners */
.rounded {
  border-radius: var(--rounded-utility)!important;
}

/* Text alignemt and format */
.align-l {
  text-align: left;
}
.align-r {
  text-align: right;
}
.align-c {
  text-align: center;
}
.upper {
  text-transform: uppercase;
}
.bold {
  font-weight: bold;
}

/* Images */
img.responsive {
  width: 100%;
  height: auto;
}
img.fit {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

